# ssmrs

./: Cargo.toml  README.md
.github/workflows/: pages.yml  rust.yml
src/: cpu.rs  instruction.rs  lib.rs  main.rs  parser.rs  register.rs
ssmrs/: Cargo.toml
ssmrs-gui/: Cargo.toml  index.html
ssmrs-gui/src/: app.rs  lib.rs  main.rs
ssmrs/src/: cpu.rs  instruction.rs  lib.rs  main.rs  parser.rs  register.rs
tests/: andtest.ssm  annote.ssm  bigboy.ssm  cursed.ssm  loop.ssm  minustest.ssm  smallboy.ssm  test.ssm  truefalse.ssm
