[package]
name = "ssmrs-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19.0"
serde = { version = "1.0.147", features = ["derive"] }
ssmrs = { path = "../ssmrs" }
tracing-subscriber = "0.3.16"
tracing-wasm = "0.2.1"
