[package]
name = "ssmrs-gui"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0"}
egui = "0.19.0"
rfd = "0.10.0"
ssmrs = { path = "../ssmrs" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.7"